Added inner grid structures of each section.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">Header</div>
-        <div class="sidebar">Sidebar</div>
-        <div class="main-content">Main Content</div>
+        <div class="header">
+            <div class="header-item search-bar">search-bar</div>
+            <div class="header-item">profile name</div>
+            <div class="header-item">big profile name</div>
+            <div class="header-item">
+                <button class="new">New</button>
+                <button class="upload">Upload</button>
+                <button class="share">Share</button>
+            </div>
+        </div>
+        <div class="sidebar">
+            <ul class="dash">
+                <li class="item dashboard">Dashboard</li>
+                <li class="item empty"></li>
+                <li class="item home ">Home</li>
+                <li class="item profile">Profile</li>
+                <li class="item messages">Messages</li>
+                <li class="item history ">History</li>
+                <li class="item tasks">Tasks</li>
+                <li class="item communities">Communities</li>
+                <li class="item empty"></li>
+                <li class="item settings">Settings</li>
+                <li class="item support">Support</li>
+                <li class="item privacy">Privacy</li>
+            </ul>
+        </div>
+        <div class="main-content">
+            <div class="title">Your Projects</div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="content-sidebar">
+                <div class="announcements">Announcements</div>
+                <div></div>
+                <div class="trending">Trending</div>
+                <div></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
