Refactoring most grid structures with minmax and utilizing a media query to make page more dynamic.

--- a/index.html
+++ b/index.html
@@ -9,44 +9,158 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="header-item search-bar">search-bar</div>
-            <div class="header-item">profile name</div>
-            <div class="header-item">big profile name</div>
-            <div class="header-item">
-                <button class="new">New</button>
-                <button class="upload">Upload</button>
-                <button class="share">Share</button>
+            <div class="header-container search-bar">
+                <input type="text" name="search" id="search">
+            </div>
+            <div class="header-container header-profile">
+                <div class="profile-bar header-icon">Icon</div>
+                <div class="profile-bar profile-picture small-picture">Picture</div>
+                <div class="profile-bar profile-name small-name">FirstName Last Name</div>
+            </div>
+            <div class="header-container greeting">
+                <div class="profile-picture big-picture">Picture</div>
+                <div class="welcome-message">Welcome message</div>
+                <div class="profile-name big-name">FirstName LastName</div>
+            </div>
+            <div class="header-container button-container">
+                <button class="header-button new">New</button>
+                <button class="header-button upload">Upload</button>
+                <button class="header-button share">Share</button>
             </div>
         </div>
         <div class="sidebar">
-            <ul class="dash">
-                <li class="item dashboard">Dashboard</li>
-                <li class="item empty"></li>
-                <li class="item home ">Home</li>
-                <li class="item profile">Profile</li>
-                <li class="item messages">Messages</li>
-                <li class="item history ">History</li>
-                <li class="item tasks">Tasks</li>
-                <li class="item communities">Communities</li>
-                <li class="item empty"></li>
-                <li class="item settings">Settings</li>
-                <li class="item support">Support</li>
-                <li class="item privacy">Privacy</li>
+            <ul class="dashboard">
+                <li class="dash-item dash-dashboard">Dashboard</li>
+                <li class="dash-item dash-empty"></li>
+                <li class="dash-item dash-home ">Home</li>
+                <li class="dash-item dash-profile">Profile</li>
+                <li class="dash-item dash-messages">Messages</li>
+                <li class="dash-item dash-history ">History</li>
+                <li class="dash-item dash-tasks">Tasks</li>
+                <li class="dash-item dash-communities">Communities</li>
+                <li class="dash-item dash-empty"></li>
+                <li class="dash-item dash-settings">Settings</li>
+                <li class="dash-item dash-support">Support</li>
+                <li class="dash-item dash-privacy">Privacy</li>
             </ul>
         </div>
-        <div class="main-content">
-            <div class="title">Your Projects</div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+        <div class="content">
+            <div class="card-container">
+                <div class="cards-title">Your Projects</div>
+                <div class="card card-one">
+                    <div class="card-text">
+                        <p class="card-title">Project One<p>
+                        <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icon one">Icon</div>
+                        <div class="icon two">Icon</div>
+                        <div class="icon three">Icon</div>
+                    </div>
+                </div>
+                <div class="card card-two">
+                    <div class="card-text">
+                        <p class="card-title">Project One<p>
+                        <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icon one">Icon</div>
+                        <div class="icon two">Icon</div>
+                    <div class="icon three">Icon</div>
+                    </div>
+                </div>
+                <div class="card card-three">
+                    <div class="card-text">
+                        <p class="card-title">Project One<p>
+                        <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icon one">Icon</div>
+                        <div class="icon two">Icon</div>
+                    <div class="icon three">Icon</div>
+                    </div> 
+                </div>
+                <div class="card card-four">
+                    <div class="card-text">
+                        <p class="card-title">Project One<p>
+                        <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icon one">Icon</div>
+                        <div class="icon two">Icon</div>
+                    <div class="icon three">Icon</div>
+                    </div> 
+                </div>
+                <div class="card card-five">
+                    <div class="card-text">
+                        <p class="card-title">Project One<p>
+                        <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icon one">Icon</div>
+                        <div class="icon two">Icon</div>
+                    <div class="icon three">Icon</div>
+                    </div> 
+                </div>
+                <div class="card card-six">
+                    <div class="card-text">
+                        <p class="card-title">Project One<p>
+                        <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icon one">Icon</div>
+                        <div class="icon two">Icon</div>
+                    <div class="icon three">Icon</div>
+                    </div> 
+                </div>
+            </div>
             <div class="content-sidebar">
-                <div class="announcements">Announcements</div>
-                <div></div>
-                <div class="trending">Trending</div>
-                <div></div>
+                <div class="content-sidebar-title">Announcements</div>
+                <div class="announcements">
+                    <div class="announcement announcement-one">
+                        <p class="announcement-title">Announcement1</p>
+                        <p class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque!</p>
+                    </div>
+                    <div class="announcement announcement-two">
+                        <p class="announcement-title">Announcement1</p>
+                        <p class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque!</p>
+                    </div>
+                    <div class="announcement announcement-three">
+                        <p class="announcement-title">Announcement1</p>
+                        <p class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque!</p>
+                    </div>
+                </div>
+                <div class="content-sidebar-title">Trending</div>
+                <div class="trending">
+                    <div class="trend">
+                        <div class="trend-icon">Icon</div>
+                        <div class="trend-text">
+                            <p>@me</p>
+                            <p>This is a trend.</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="trend-icon">Icon</div>
+                        <div class="trend-text">
+                            <p>@me</p>
+                            <p>This is a trend.</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="trend-icon">Icon</div>
+                        <div class="trend-text">
+                            <p>@me</p>
+                            <p>This is a trend.</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="trend-icon">Icon</div>
+                        <div class="trend-text">
+                            <p>@me</p>
+                            <p>This is a trend.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
