--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <div class="container">
         <div class="header">
             <div class="header-container search-bar">
+                <img src="./images/magnify.svg" alt="magnifying glass" class="search-icon">
                 <input type="text" name="search" id="search">
             </div>
             <div class="header-container header-profile">
-                <div class="profile-bar header-icon">Icon</div>
-                <div class="profile-bar profile-picture small-picture">Picture</div>
-                <div class="profile-bar profile-name small-name">FirstName Last Name</div>
+                <img src="./images/bell-outline.svg" alt="bell outline" class="header-icon">
+                <div class="profile-bar"><img src="./images/cactus-7975384_640.jpg" alt="happy cactus" class="small-picture"></div>
+                <div class="profile-bar profile-name small-name">Jane Doe</div>
             </div>
             <div class="header-container greeting">
-                <div class="profile-picture big-picture">Picture</div>
-                <div class="welcome-message">Welcome message</div>
-                <div class="profile-name big-name">FirstName LastName</div>
+                <img src="./images/cactus-7975384_640.jpg" alt="happy cactus" class="big-picture">
+                <div class="welcome-message">Hello there,</div>
+                <div class="profile-name big-name">Jane Dow (@jDoe)</div>
             </div>
             <div class="header-container button-container">
                 <button class="header-button new">New</button>
@@ -30,18 +31,18 @@
         </div>
         <div class="sidebar">
             <ul class="dashboard">
-                <li class="dash-item dash-dashboard">Dashboard</li>
+                <li class="dash-item dash-dashboard"><img src="./images/view-dashboard-variant.svg" alt="dashboard" class="dash-icon"><div class="dash-word">Dashboard</div></li>
                 <li class="dash-item dash-empty"></li>
-                <li class="dash-item dash-home ">Home</li>
-                <li class="dash-item dash-profile">Profile</li>
-                <li class="dash-item dash-messages">Messages</li>
-                <li class="dash-item dash-history ">History</li>
-                <li class="dash-item dash-tasks">Tasks</li>
-                <li class="dash-item dash-communities">Communities</li>
+                <li class="dash-item dash-home"><img src="./images/home-circle-outline.svg" alt="house" class="dash-icon"><div>Home</div></li>
+                <li class="dash-item dash-profile"><img src="./images/account-box-outline.svg" alt="profile" class="dash-icon"><div>Profile</div></li>
+                <li class="dash-item dash-messages"> <img src="./images/email-multiple.svg" alt="envelopes" class="dash-icon"><div>Messages</div></li>
+                <li class="dash-item dash-history"><img src="./images/history.svg" alt="clock" class="dash-icon"><div>History</div></li>
+                <li class="dash-item dash-tasks"><img src="./images/file-alert-outline.svg" alt="file" class="dash-icon"><div>Tasks</div></li>
+                <li class="dash-item dash-communities"><img src="./images/account-group.svg" alt="group of people" class="dash-icon"><div>Communities</div></li>
                 <li class="dash-item dash-empty"></li>
-                <li class="dash-item dash-settings">Settings</li>
-                <li class="dash-item dash-support">Support</li>
-                <li class="dash-item dash-privacy">Privacy</li>
+                <li class="dash-item dash-settings"><img src="./images/cogs.svg" alt="cogs" class="dash-icon"><div>Settings</div></li>
+                <li class="dash-item dash-support"><img src="./images/face-agent.svg" alt="face" class="dash-icon"><div>Support</div></li>
+                <li class="dash-item dash-privacy"><img src="./images/shield-account.svg" alt="shield" class="dash-icon"><div>Privacy</div></li>
             </ul>
         </div>
         <div class="content">
@@ -53,111 +54,111 @@
                         <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
                     </div>
                     <div class="icons">
-                        <div class="icon one">Icon</div>
-                        <div class="icon two">Icon</div>
-                        <div class="icon three">Icon</div>
+                        <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                        <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                        <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                     </div>
                 </div>
                 <div class="card card-two">
                     <div class="card-text">
-                        <p class="card-title">Project One<p>
+                        <p class="card-title">Project Two<p>
                         <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
                     </div>
                     <div class="icons">
-                        <div class="icon one">Icon</div>
-                        <div class="icon two">Icon</div>
-                    <div class="icon three">Icon</div>
+                        <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                        <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                        <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                     </div>
                 </div>
                 <div class="card card-three">
                     <div class="card-text">
-                        <p class="card-title">Project One<p>
+                        <p class="card-title">Project Three<p>
                         <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
                     </div>
                     <div class="icons">
-                        <div class="icon one">Icon</div>
-                        <div class="icon two">Icon</div>
-                    <div class="icon three">Icon</div>
+                        <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                        <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                        <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                     </div> 
                 </div>
                 <div class="card card-four">
                     <div class="card-text">
-                        <p class="card-title">Project One<p>
+                        <p class="card-title">Project Four<p>
                         <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
                     </div>
                     <div class="icons">
-                        <div class="icon one">Icon</div>
-                        <div class="icon two">Icon</div>
-                    <div class="icon three">Icon</div>
+                        <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                        <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                        <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                     </div> 
                 </div>
                 <div class="card card-five">
                     <div class="card-text">
-                        <p class="card-title">Project One<p>
+                        <p class="card-title">Project Five<p>
                         <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
                     </div>
                     <div class="icons">
-                        <div class="icon one">Icon</div>
-                        <div class="icon two">Icon</div>
-                    <div class="icon three">Icon</div>
+                        <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                        <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                        <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                     </div> 
                 </div>
                 <div class="card card-six">
                     <div class="card-text">
-                        <p class="card-title">Project One<p>
+                        <p class="card-title">Project Six<p>
                         <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
                     </div>
                     <div class="icons">
-                        <div class="icon one">Icon</div>
-                        <div class="icon two">Icon</div>
-                    <div class="icon three">Icon</div>
+                        <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                        <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                        <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                     </div> 
                 </div>
             </div>
             <div class="content-sidebar">
-                <div class="content-sidebar-title">Announcements</div>
+                <div class="content-sidebar-title">Site Maintenance</div>
                 <div class="announcements">
                     <div class="announcement announcement-one">
-                        <p class="announcement-title">Announcement1</p>
+                        <p class="announcement-title">New Feature</p>
                         <p class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque!</p>
                     </div>
                     <div class="announcement announcement-two">
-                        <p class="announcement-title">Announcement1</p>
+                        <p class="announcement-title">Community Event</p>
                         <p class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque!</p>
                     </div>
                     <div class="announcement announcement-three">
-                        <p class="announcement-title">Announcement1</p>
+                        <p class="announcement-title">Big Event!</p>
                         <p class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eaque!</p>
                     </div>
                 </div>
                 <div class="content-sidebar-title">Trending</div>
                 <div class="trending">
                     <div class="trend">
-                        <div class="trend-icon">Icon</div>
+                        <img src="./images/fox-5679446_640.png" alt="fox" class="trend-icon">
                         <div class="trend-text">
-                            <p>@me</p>
-                            <p>This is a trend.</p>
+                            <p>@lMartinez</p>
+                            <p>Image by <a href="https://pixabay.com/users/satheeshsankaran-11196627/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5679446">Satheesh Sankaran</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5679446">Pixabay</a></p>
                         </div>
                     </div>
                     <div class="trend">
-                        <div class="trend-icon">Icon</div>
+                        <img src="./images/cartoon-5544856_640.jpg" alt="two polar bears" class="trend-icon">
                         <div class="trend-text">
-                            <p>@me</p>
-                            <p>This is a trend.</p>
+                            <p>@pHart</p>
+                            <p>Image by <a href="https://pixabay.com/users/onceinueng_63632924-7520188/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5544856">Kankanravee Kanyawath</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5544856">Pixabay</a></p>
                         </div>
                     </div>
                     <div class="trend">
-                        <div class="trend-icon">Icon</div>
+                        <img src="./images/robot-8449206_640.jpg" alt="happy robot" class="trend-icon">
                         <div class="trend-text">
-                            <p>@me</p>
-                            <p>This is a trend.</p>
+                            <p>@hTerry</p>
+                            <p>Image by <a href="https://pixabay.com/users/andremsdesign-40088375/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8449206">André Santana</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8449206">Pixabay</a></p>
                         </div>
                     </div>
                     <div class="trend">
-                        <div class="trend-icon">Icon</div>
+                        <img src="./images/cactus-7975384_640.jpg" alt="happy cactus" class="trend-icon">
                         <div class="trend-text">
-                            <p>@me</p>
-                            <p>This is a trend.</p>
+                            <p>@jDoe</p>
+                            <p>Image by <a href="https://pixabay.com/users/susan-lu4esm-7009216/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7975384">Susan Cipriano</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7975384">Pixabay</a></p>
                         </div>
                     </div>
                 </div>
