Change a few styles such as color and padding

--- a/index.html
+++ b/index.html
@@ -167,6 +167,39 @@
                             <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
                         </div>
                     </div>
+                    <div class="card card-seven">
+                        <div class="card-text">
+                            <p class="card-title">Project Seven<p>
+                            <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                        </div>
+                        <div class="icons">
+                            <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                            <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                            <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
+                        </div>
+                    </div>
+                    <div class="card card-eight">
+                        <div class="card-text">
+                            <p class="card-title">Project Eight<p>
+                            <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                        </div>
+                        <div class="icons">
+                            <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                            <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                            <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
+                        </div>
+                    </div>
+                    <div class="card card-nine">
+                        <div class="card-text">
+                            <p class="card-title">Project Nine<p>
+                            <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit, a sequi aperiam enim suscipit quis ipsum unde, quisquam ipsam, quos minus dolorem? Unde dolor dolorem aliquid! Unde, dicta assumenda?</p>
+                        </div>
+                        <div class="icons">
+                            <div class="icon one"><img src="./images/heart.svg" alt="" class="svg-icon"></div>
+                            <div class="icon two"><img src="./images/file-edit.svg" alt="" class="svg-icon"></div>
+                            <div class="icon three"><img src="./images/export-variant.svg" alt="" class="svg-icon"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="content-sidebar">
